<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:theme="@style/Theme.CourseworkApp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/red">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/restaurantPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/r_name_placeholder"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scorePlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="6dp"
                android:text="@string/score_placeholder"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/accountReviewImgHolder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- public domain image from https://publicdomainvectors.org/en/free-clipart/Graphic-placeholder/74321.html -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/temp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- public domain image from https://publicdomainvectors.org/en/free-clipart/Location-symbol/67854.html -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/locationLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/locationsymbol"
                android:layout_gravity="center_vertical"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/locationPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/location_placeholder_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reviewPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/review_placeholder_text"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>