<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="675dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:titleTextColor="?attr/colorOnPrimary">

    </com.google.android.material.appbar.MaterialToolbar>

    <EditText
        android:id="@+id/logInEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/email_address_text"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/logInPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submit_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInEmailAddress" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="373dp"
        android:text="@string/log_in_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"

        android:layout_marginTop="180dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="19dp"
        android:text="@string/log_in_text"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/logInEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>