<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/restaurant_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="675dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="?attr/colorOnPrimary">

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:id="@+id/textRestaurantHolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurant_toolbar">

        <TextView
            android:id="@+id/textRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:text="@string/restaurant_name_placeholder"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!-- public domain image from https://publicdomainvectors.org/en/free-clipart/Location-symbol/67854.html -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/locationLogo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/locationsymbol"
                android:layout_gravity="center_vertical"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/locationPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/location_placeholder_text"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurantReviewRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRestaurantHolder"
        tools:listitem="@layout/restaurantreviewlayout">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createReviewFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        android:src="@drawable/plus"
        android:onClick="openCreateReviewActivity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="659dp" />


</androidx.constraintlayout.widget.ConstraintLayout>